--- a/build_msvc/bench_bench_navcoin/bench_bench_navcoin.vcxproj
+++ b/build_msvc/bench_bench_navcoin/bench_bench_navcoin.vcxproj
@@ -116,7 +116,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\libbitcoinconsensus\libbitcoinconsensus.vcxproj">
+    <ProjectReference Include="..\libnavcoinconsensus\libnavcoinconsensus.vcxproj">
       <Project>{2b384fa8-9ee1-4544-93cb-0d733c25e8ce}</Project>
     </ProjectReference>
     <ProjectReference Include="..\libbitcoin_common\libbitcoin_common.vcxproj">
