--- a/build_msvc/navcoind/navcoind.vcxproj
+++ b/build_msvc/navcoind/navcoind.vcxproj
@@ -9,9 +9,9 @@
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\bitcoind.cpp" />
-    <ClCompile Include="..\..\src\init\bitcoind.cpp">
-      <ObjectFileName>$(IntDir)init_bitcoind.obj</ObjectFileName>
+    <ClCompile Include="..\..\src\navcoind.cpp" />
+    <ClCompile Include="..\..\src\init\navcoind.cpp">
+      <ObjectFileName>$(IntDir)init_navcoind.obj</ObjectFileName>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
