--- a/contrib/init/navcoind.conf
+++ b/contrib/init/navcoind.conf
@@ -3,14 +3,14 @@ description "Bitcoin Core Daemon"
 start on runlevel [2345]
 stop on starting rc RUNLEVEL=[016]
 
-env BITCOIND_BIN="/usr/bin/bitcoind"
+env BITCOIND_BIN="/usr/bin/navcoind"
 env BITCOIND_USER="bitcoin"
 env BITCOIND_GROUP="bitcoin"
-env BITCOIND_PIDDIR="/var/run/bitcoind"
+env BITCOIND_PIDDIR="/var/run/navcoind"
 # upstart can't handle variables constructed with other variables
-env BITCOIND_PIDFILE="/var/run/bitcoind/bitcoind.pid"
+env BITCOIND_PIDFILE="/var/run/navcoind/navcoind.pid"
 env BITCOIND_CONFIGFILE="/etc/bitcoin/bitcoin.conf"
-env BITCOIND_DATADIR="/var/lib/bitcoind"
+env BITCOIND_DATADIR="/var/lib/navcoind"
 
 expect fork
 
@@ -20,12 +20,12 @@ kill timeout 600
 
 pre-start script
     # this will catch non-existent config files
-    # bitcoind will check and exit with this very warning, but it can do so
+    # navcoind will check and exit with this very warning, but it can do so
     # long after forking, leaving upstart to think everything started fine.
     # since this is a commonly encountered case on install, just check and
     # warn here.
     if ! grep -qs '^rpcpassword=' "$BITCOIND_CONFIGFILE" ; then
-        echo "ERROR: You must set a secure rpcpassword to run bitcoind."
+        echo "ERROR: You must set a secure rpcpassword to run navcoind."
         echo "The setting must appear in $BITCOIND_CONFIGFILE"
         echo
         echo "This password is security critical to securing wallets "
