--- a/contrib/linearize/example-linearize.cfg
+++ b/contrib/linearize/example-linearize.cfg
@@ -1,4 +1,4 @@
-# bitcoind RPC settings (linearize-hashes)
+# navcoind RPC settings (linearize-hashes)
 rpcuser=someuser
 rpcpassword=somepassword
 #datadir=~/.bitcoin
