[Branding] bitcoin -> navcoin

--- a/contrib/init/navcoind.conf
+++ b/contrib/init/navcoind.conf
@@ -9,7 +9,7 @@ env BITCOIND_GROUP="bitcoin"
 env BITCOIND_PIDDIR="/var/run/navcoind"
 # upstart can't handle variables constructed with other variables
 env BITCOIND_PIDFILE="/var/run/navcoind/navcoind.pid"
-env BITCOIND_CONFIGFILE="/etc/bitcoin/bitcoin.conf"
+env BITCOIND_CONFIGFILE="/etc/navcoin/navcoin.conf"
 env BITCOIND_DATADIR="/var/lib/navcoind"
 
 expect fork
