--- a/configure.ac
+++ b/configure.ac
@@ -29,13 +29,13 @@ if test -n "$PKG_CONFIG_LIBDIR"; then
   PKG_CONFIG="env PKG_CONFIG_LIBDIR=$PKG_CONFIG_LIBDIR $PKG_CONFIG"
 fi
 
-BITCOIN_DAEMON_NAME=navcoind
-BITCOIN_TEST_NAME=test_navcoin
-BITCOIN_CLI_NAME=navcoin-cli
-BITCOIN_TX_NAME=navcoin-tx
-BITCOIN_UTIL_NAME=navcoin-util
-BITCOIN_CHAINSTATE_NAME=navcoin-chainstate
-BITCOIN_WALLET_TOOL_NAME=navcoin-wallet
+NAVCOIN_DAEMON_NAME=navcoind
+NAVCOIN_TEST_NAME=test_navcoin
+NAVCOIN_CLI_NAME=navcoin-cli
+NAVCOIN_TX_NAME=navcoin-tx
+NAVCOIN_UTIL_NAME=navcoin-util
+NAVCOIN_CHAINSTATE_NAME=navcoin-chainstate
+NAVCOIN_WALLET_TOOL_NAME=navcoin-wallet
 dnl Multi Process
 BITCOIN_MP_NODE_NAME=navcoin-node
 
@@ -1809,13 +1809,13 @@ AC_SUBST(COPYRIGHT_YEAR, _COPYRIGHT_YEAR)
 AC_SUBST(COPYRIGHT_HOLDERS, "_COPYRIGHT_HOLDERS")
 AC_SUBST(COPYRIGHT_HOLDERS_SUBSTITUTION, "_COPYRIGHT_HOLDERS_SUBSTITUTION")
 AC_SUBST(COPYRIGHT_HOLDERS_FINAL, "_COPYRIGHT_HOLDERS_FINAL")
-AC_SUBST(BITCOIN_DAEMON_NAME)
-AC_SUBST(BITCOIN_TEST_NAME)
-AC_SUBST(BITCOIN_CLI_NAME)
-AC_SUBST(BITCOIN_TX_NAME)
-AC_SUBST(BITCOIN_UTIL_NAME)
-AC_SUBST(BITCOIN_CHAINSTATE_NAME)
-AC_SUBST(BITCOIN_WALLET_TOOL_NAME)
+AC_SUBST(NAVCOIN_DAEMON_NAME)
+AC_SUBST(NAVCOIN_TEST_NAME)
+AC_SUBST(NAVCOIN_CLI_NAME)
+AC_SUBST(NAVCOIN_TX_NAME)
+AC_SUBST(NAVCOIN_UTIL_NAME)
+AC_SUBST(NAVCOIN_CHAINSTATE_NAME)
+AC_SUBST(NAVCOIN_WALLET_TOOL_NAME)
 AC_SUBST(BITCOIN_MP_NODE_NAME)
 
 AC_SUBST(RELDFLAGS)
