Updated MSan test to run on medium vps runner

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -148,7 +148,7 @@ task:
   << : *GLOBAL_TASK_TEMPLATE
   persistent_worker:
     labels:
-      type: small
+      type: medium
   timeout_in: 300m  # Use longer timeout for the *rare* case where a full build (llvm + msan + depends + ...) needs to be done.
   env:
     FILE_ENV: "./ci/test/00_setup_env_native_msan.sh"
