--- a/build_msvc/test_navcoin/test_navcoin.vcxproj
+++ b/build_msvc/test_navcoin/test_navcoin.vcxproj
@@ -58,6 +58,12 @@
     <ProjectReference Include="..\libleveldb\libleveldb.vcxproj">
       <Project>{18430fef-6b61-4c53-b396-718e02850f1b}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\src\bls\src\proj\bls384_256.vcxproj">
+      <Project>{1DBB979A-C212-45CD-9563-446A96F87F72}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\bls\mcl\src\proj\mcl.vcxproj">
+      <Project>{1DBB979A-C212-45CD-9563-446A96F87F71}</Project>
+    </ProjectReference>
   </ItemGroup>
   <ItemDefinitionGroup>
      <ClCompile>
