--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -243,6 +243,7 @@ BITCOIN_CORE_H = \
   noui.h \
   outputtype.h \
   policy/v3_policy.h \
+  policy/issuer_selected_policy.h \
   policy/feerate.h \
   policy/fees.h \
   policy/fees_args.h \
@@ -443,6 +444,7 @@ libbitcoin_node_a_SOURCES = \
   node/validation_cache_args.cpp \
   noui.cpp \
   policy/v3_policy.cpp \
+  policy/issuer_selected_policy.cpp \
   policy/fees.cpp \
   policy/fees_args.cpp \
   policy/packages.cpp \
@@ -705,6 +707,7 @@ libbitcoin_common_a_SOURCES = \
   net_permissions.cpp \
   outputtype.cpp \
   policy/v3_policy.cpp \
+  policy/issuer_selected_policy.cpp \
   policy/feerate.cpp \
   policy/policy.cpp \
   protocol.cpp \
@@ -964,6 +967,7 @@ libbitcoinkernel_la_SOURCES = \
   node/chainstate.cpp \
   node/utxo_snapshot.cpp \
   policy/v3_policy.cpp \
+  policy/issuer_selected_policy.cpp \
   policy/feerate.cpp \
   policy/packages.cpp \
   policy/policy.cpp \
