--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -290,5 +290,6 @@ jobs:
       - name: Run functional tests
         env:
           TEST_RUNNER_EXTRA: ${{ github.event_name != 'pull_request' && '--extended' || '' }}
-        shell: cmd
-        run: py -3 test\functional\test_runner.py --jobs %NUMBER_OF_PROCESSORS% --ci --quiet --tmpdirprefix=%RUNNER_TEMP% --combinedlogslen=99999999 --timeout-factor=%TEST_RUNNER_TIMEOUT_FACTOR% %TEST_RUNNER_EXTRA%
+        run: |
+          $command = "py -3 test\functional\test_runner.py --jobs $($env:NUMBER_OF_PROCESSORS) --ci --quiet --tmpdirprefix=$($env:RUNNER_TEMP) --combinedlogslen=99999999 --timeout-factor=$($env:TEST_RUNNER_TIMEOUT_FACTOR) $($env:TEST_RUNNER_EXTRA)"
+          Invoke-Expression $command
