--- a/.github/workflows/clang-diff-format.yml
+++ b/.github/workflows/clang-diff-format.yml
@@ -13,5 +13,12 @@ jobs:
       - name: Fetch git
         run: git fetch
       - name: Run Clang-Format-Diff.py
-        run: git diff -U0 origin/develop -- . ':(exclude)src/qt/dashstrings.cpp' ':(exclude)src/qt/locale/' | ./contrib/devtools/clang-format-diff.py -p1
-
+        run: |
+          git diff -U0 origin/develop -- . ':(exclude)src/qt/dashstrings.cpp' ':(exclude)src/qt/locale/' | ./contrib/devtools/clang-format-diff.py -p1 > diff_output.txt
+          if [ -s diff_output.txt ]; then
+              echo "Clang format differences found:"
+              cat diff_output.txt
+              exit 1
+          else
+              echo "No Clang format differences found."
+          fi
