--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -191,6 +191,7 @@ BLSCT_H = \
   blsct/signature.h \
   blsct/wallet/address.h \
   blsct/wallet/hdchain.h \
+  blsct/wallet/helpers.h \
   blsct/wallet/keyman.h \
   blsct/wallet/keyring.h \
   blsct/wallet/txfactory.h \
@@ -657,6 +658,7 @@ libbitcoin_wallet_a_SOURCES = \
   blsct/set_mem_proof/set_mem_proof_setup.cpp \
   blsct/signature.cpp \
   blsct/wallet/address.cpp \
+  blsct/wallet/helpers.cpp \
   blsct/wallet/keyman.cpp \
   blsct/wallet/keyring.cpp \
   blsct/wallet/txfactory.cpp \
