--- a/contrib/init/bitcoind.conf
+++ b/contrib/init/bitcoind.conf
@@ -3,14 +3,12 @@ description "Bitcoin Core Daemon"
 start on runlevel [2345]
 stop on starting rc RUNLEVEL=[016]
 
-env BITCOIND_BIN="/usr/bin/bitcoind"
+env BITCOIND="/usr/bin/bitcoind"
 env BITCOIND_USER="bitcoin"
 env BITCOIND_GROUP="bitcoin"
-env BITCOIND_PIDDIR="/var/run/bitcoind"
-# upstart can't handle variables constructed with other variables
-env BITCOIND_PIDFILE="/var/run/bitcoind/bitcoind.pid"
-env BITCOIND_CONFIGFILE="/etc/bitcoin/bitcoin.conf"
-env BITCOIND_DATADIR="/var/lib/bitcoind"
+env BITCOIND_PID="/var/run/bitcoind/bitcoind.pid"
+env BITCOIND_CONF="/etc/bitcoin/bitcoin.conf"
+env BITCOIND_DATA="/var/lib/bitcoind"
 
 expect fork
 
@@ -19,47 +17,40 @@ respawn limit 5 120
 kill timeout 600
 
 pre-start script
-    # this will catch non-existent config files
-    # bitcoind will check and exit with this very warning, but it can do so
-    # long after forking, leaving upstart to think everything started fine.
-    # since this is a commonly encountered case on install, just check and
-    # warn here.
-    if ! grep -qs '^rpcpassword=' "$BITCOIND_CONFIGFILE" ; then
-        echo "ERROR: You must set a secure rpcpassword to run bitcoind."
-        echo "The setting must appear in $BITCOIND_CONFIGFILE"
+    if ! grep -qs '^rpcpassword=' "$BITCOIND_CONF" ; then
+        echo "ERRO: Você deve definir uma 'rpcpassword' segura no arquivo de configuração do bitcoind."
+        echo "A configuração deve aparecer em $BITCOIND_CONF"
         echo
-        echo "This password is security critical to securing wallets "
-        echo "and must not be the same as the rpcuser setting."
-        echo "You can generate a suitable random password using the following "
-        echo "command from the shell:"
+        echo "Esta senha é crítica para a segurança das carteiras e não deve ser a mesma que o 'rpcuser'."
+        echo "Você pode gerar uma senha aleatória adequada usando o seguinte comando:"
         echo
         echo "bash -c 'tr -dc a-zA-Z0-9 < /dev/urandom | head -c32 && echo'"
         echo
-        echo "It is recommended that you also set alertnotify so you are "
-        echo "notified of problems:"
+        echo "É recomendável que você também configure 'alertnotify' para ser notificado de problemas:"
         echo
-        echo "ie: alertnotify=echo %%s | mail -s \"Bitcoin Alert\"" \
-            "admin@foo.com"
+        echo "Exemplo: alertnotify=echo %%s | mail -s \"Alerta Bitcoin\" admin@foo.com"
         echo
         exit 1
     fi
 
     mkdir -p "$BITCOIND_PIDDIR"
-    chmod 0755 "$BITCOIND_PIDDIR"
     chown $BITCOIND_USER:$BITCOIND_GROUP "$BITCOIND_PIDDIR"
-    chown $BITCOIND_USER:$BITCOIND_GROUP "$BITCOIND_CONFIGFILE"
-    chmod 0660 "$BITCOIND_CONFIGFILE"
+    chmod 0750 "$BITCOIND_PIDDIR"
+
+    chown $BITCOIND_USER:$BITCOIND_GROUP "$BITCOIND_CONF"
+    chmod 0640 "$BITCOIND_CONF"
 end script
 
 exec start-stop-daemon \
     --start \
-    --pidfile "$BITCOIND_PIDFILE" \
+    --pidfile "$BITCOIND_PID" \
     --chuid $BITCOIND_USER:$BITCOIND_GROUP \
-    --exec "$BITCOIND_BIN" \
+    --exec "$BITCOIND" \
     -- \
-    -pid="$BITCOIND_PIDFILE" \
-    -conf="$BITCOIND_CONFIGFILE" \
-    -datadir="$BITCOIND_DATADIR" \
+    -pid="$BITCOIND_PID" \
+    -conf="$BITCOIND_CONF" \
+    -datadir="$BITCOIND_DATA" \
     -disablewallet \
     -daemon
+
 
