--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -856,10 +856,13 @@ libbitcoin_consensus_a_SOURCES = \
   blsct/building_block/weighted_inner_prod_arg.cpp \
   blsct/common.cpp \
   blsct/range_proof/bulletproofs/range_proof.cpp \
+  blsct/range_proof/bulletproofs/range_proof_logic.cpp \
+  blsct/range_proof/bulletproofs/range_proof_with_transcript.cpp \
   blsct/range_proof/bulletproofs_plus/range_proof.cpp \
   blsct/range_proof/common.cpp \
   blsct/range_proof/generators.cpp \
   blsct/range_proof/proof_base.cpp \
+  blsct/range_proof/msg_amt_cipher.cpp \
   blsct/range_proof/bulletproofs/range_proof.cpp \
   blsct/range_proof/bulletproofs_plus/range_proof.cpp \
   blsct/range_proof/bulletproofs_plus/util.cpp \
